--- a/ServerBaseLibraryXUnitTest/ServerBaseLibraryXUnitTest.csproj
+++ b/ServerBaseLibraryXUnitTest/ServerBaseLibraryXUnitTest.csproj
@@ -13,9 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="TcpServerBaseLibrary">
-      <HintPath>..\Src\bin\Debug\netstandard2.0\TcpServerBaseLibrary.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\Src\TcpServerBaseLibrary.csproj" />
   </ItemGroup>
 
 </Project>
